--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,15 +1,10 @@
-/build
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+../.gradle
+local.properties
+../.idea/
 .DS_Store
-/build
-/captures
+build
+captures
 .externalNativeBuild
 .cxx
+google-services.json
