--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 *.iml
-../.gradle
+.gradle
+.settings
 local.properties
-../.idea/
 .DS_Store
 build
 captures
 .externalNativeBuild
 .cxx
-google-services.json
+*.json
+.idea
