--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 *.iml
-../.gradle
+.gradle
 local.properties
-../.idea/
+.idea/
 .DS_Store
 build
 captures
 .externalNativeBuild
 .cxx
-google-services.json
+*.json
