--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
             adb shell input keyevent 82
       - run:
           name: Run EspressoTests
-          command: ./gradlew connectedDemoDebugAndroidTest
+          command: ./gradlew test
       - store_artifacts:
           path: app/build/reports
           destination: reports
