--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       #      - run:
       #         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
       #         command: sudo chmod +x ./gradlew
-      - run: ls ${HOME}
+      - run: cd .. && ls ${HOME}
       - run: echo $GOOGLE_SERVICES_FILE | base64 --decode > ${HOME}/app/google-services.json
       - run:
           name: Download Dependencies
