--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       #         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
       #         command: sudo chmod +x ./gradlew
       - run: cd .. && ls ${HOME}
-      - run: echo $GOOGLE_SERVICES_FILE | base64 --decode > ${HOME}/app/google-services.json
+      - run: echo $GOOGLE_SERVICES_FILE | base64 --decode > ./google-services.json
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
